--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,10 @@
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">Webserv/1.1</a></li>
-                <li class="sidebar-nav-item"><a href="/admin">/admin</a></li>
-                <li class="sidebar-nav-item"><a href="/data">/data</a></li>
-                <li class="sidebar-nav-item"><a href="/autoindex/">/autoindex</a></li>    
+                <li class="sidebar-nav-item"><a href="/">Home</a></li>
+                <li class="sidebar-nav-item"><a href="/admin">Admin</a></li>
+                <li class="sidebar-nav-item"><a href="/data">Data</a></li>
+                <li class="sidebar-nav-item"><a href="/autoindex/">autoindex</a></li>    
                 <li class="sidebar-nav-item"><a href="form.html">Upload</a></li>
                 <li class="sidebar-nav-item"><a href="form_cookies.html">Cookies</a></li>
                 <li class="sidebar-nav-item"><a href="flush.html">Delete</a></li>
